# ai-analyst-ml-service

ml-service/: .pre-commit-config.yaml  pyproject.toml
ml-service/src/: main.py
ml-service/src/app/: config.py  logger.py  main.py
ml-service/src/services/: VkService.py
