[project]
name = "ml-service"
version = "0.1.0"
description = ""
authors = [
    {name = "whitefooox",email = "whitefox061@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "fastapi-cli (>=0.0.7,<0.0.8)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "ml_service", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
